# fcfParallelExamples

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
blur/: CMakeLists.txt  impl.cpp  main.cpp
blur-multy/: CMakeLists.txt  main.cpp
blur/resources/: source.xcf
libraries/fcfImage/: image.hpp  macro.hpp
